--- a/index.ipynb
+++ b/index.ipynb
@@ -1079,9 +1079,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(unique_travel_cities)"
    ]
@@ -1095,28 +1106,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
+       "['Albuquerque',\n",
        " 'Archipelago Sea',\n",
        " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
-       " 'Salina Island',\n",
        " 'Walla Walla Valley',\n",
+       " 'Pyeongchang',\n",
        " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Solta',\n",
+       " 'Salina Island',\n",
+       " 'Toronto',\n",
+       " 'Marakesh',\n",
+       " 'Buenos Aires',\n",
+       " 'Greenville',\n",
+       " 'Los Cabos']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
